# HOREA-Hexapod-Robot

./: README.md
CAD/: BasePlate.stl  Base_Plate_Tolerance v6.f3d  Base_Plate_Tolerance v6.stl  Coxa v2.f3d  Coxa v2.stl  Coxa.stl  Femur v5.f3d  Femur v5.stl  Femur.stl  FemurLid.stl  Full BOM.xlsx  RaspStack v7.f3d  RaspStack v7.stl  RaspStack.stl  SenseStack v2.f3d  SenseStack v2.stl  Spacer v2.f3d  Spacer v2.stl  Spacer.stl  Stack base v5.f3d  Stack base v5.stl  StackLifter.stl  TibiaFrame.stl  TibiaHoldingPin.stl  TibiaLid.stl  TibiaTip.stl  Tibia_15cm v2.f3d  Tibia_15cm v2.stl  TopStack.stl
development/demos/: buttonContinuousReadPD.py  buttonStateChangeReadPD.py  pwmServoControl.py  sixButtonStateChangeReadPD.py  tripleButtonStateChangeReadPD.py
development/legacy/: 9GservoTest.py  all90deg.py  inverseKin3Points.py
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/gait_controller/: package.xml  setup.cfg  setup.py
src/gait_controller/config/: gaitDescriptors.yaml
src/hexapod_bringup/: CMakeLists.txt  package.xml
src/hexapod_controller/: package.xml  setup.py
src/hexapod_interfaces/: CMakeLists.txt  package.xml
src/hexapod_interfaces/action/: StepAnimator.action  StepManagement.action
src/hexapod_interfaces/msg/: LegReferencing.msg  StepDescriptor.msg  TargetAngles.msg  WaypointSetter.msg
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/leg_controller/: package.xml  setup.cfg  setup.py
src/log/: latest_build
src/sensory_controller/: package.xml  setup.cfg  setup.py
(+87 files in other folders)
